1st Snaiwatzer War and Elender Ideas

--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -35,6 +35,24 @@
  snaiwatzer_expansion_of_adrianburg_privileges: "Expansion of Adrianburg Privilege"
  snaiwatzer_expansion_of_adrianburg_privileges_desc: "Adrianburg Privilege marks the time period Eniver ceased to be and disunited Snaiwatz came to be, but now, we have managed to secure expansion of said Privileges, and this marks the point in time that Snaiwatz became true heir to Kuninstoftum of Eniver."
  
+ elender_ideas: "Elender Ideas"
+ elender_ideas_start: "Elender Traditions"
+ elender_ideas_bonus: "Elender Ambition"
+ elender_elender_recruitment_system: "Elender Recruitment System"
+ elender_elender_recruitment_system_desc: "Most of our soldiers come from free peasantry and professional private armies of Snaiwatz that remained loyal to our cause. If we unify these systems, we could end up with higher conscription."
+ elender_rebuild_old_eniver_roads: "Rebuild the Old Eniver Roads"
+ elender_rebuild_old_eniver_roads_desc: "Old Eniverian Roads are key to maintaining our presence in the Snaiwatz region, both military-wise and trade-wise."
+ elender_riches_of_snaiwatz: "Riches of Snaiwatz"
+ elender_riches_of_snaiwatz_desc: "Snaiwatz was known in later centuries for it's natural riches, Gold, Silver, Quartz, and extreme deposits of Iron. We should open new mines to utilize this riches."
+ elender_anti_imperial_sentiment: "Anti-imperial Sentiment"
+ elender_anti_imperial_sentiment_desc: "We are heirs of free Elenders, and we defy our fate as slave soldiers of the nobility. We shall burn down this empire like Liemar wanted us to do!"
+ elender_lessons_of_franz_kitzhen: "Lessons of Franz Kitzhen"
+ elender_lessons_of_franz_kitzhen_desc: "Franz Kitzhen, the founder of Elender Confederation and it's first leader, has made significat impact on the modern warfare with the way how he utilized the artillery, moving it swiftly from one side of the battlefield to the other."
+ elender_first_ministry_of_forgein_politics: "First Ministry of Forgein Politics"
+ elender_first_ministry_of_forgein_politics_desc: "Elender Diplomatisches Korps was first entity in the whole world that we could call by modern-term of Ministry of Forgein Politics, as it revolutionized the way it has kept up Elender relations with other states."
+ elender_legacy_of_mercenary_wars: "Legacy of Mercenary Wars"
+ elender_legacy_of_mercenary_wars_desc: "With Mercenary wars over, we continue to live on, and spread our influence not only all over Snaiwatz, but all over the Silvestria, and we shall not stop until all of the Silvestria is under our rule!"
+ 
  snaiwatz.1.t: "The Development of Coal Mining"
  snaiwatz.1.desc: "Brothers of the mine rejoice!\nSwing, swing, swing with me!\nRaise your pick and raise your voice!\nSing, sing, sing with me!\nDown and down into the deep\nWho knows what we'll find beneath?\nDiamonds, rubies, gold, and more\nHidden in the mountains store\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\\nThe sunlight will not reach this low\nDeep, deep in the mine\nNever seen the blue moonglow\nSnaiwatzer won't fly so high\nFill a glass and down some mead\nStuff your bellies at the feast!\nStumble home and fall asleep\nDreaming in our mountain keep\nBorn underground\nGrown inside a rocky womb\nThe Earth is our cradle\nThe mountain shall become our tomb\nFace us on the battlefield\nYou will meet your doom\nWe do not fear what lies beneath\nWe can never dig too deep\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal."
  snaiwatz.1.a: "The Coal... is MINE!"
@@ -76,3 +94,28 @@
  TD_Rise_of_Elenders: "Rise of the Elender Confederation"
  confederation_of_the_wretched_reform: "Confederation of The Wretched"
  confederation_of_the_wretched_reform_desc: "REPLACE_ME"
+ 1ST_SNAIWATZER_WAR_WN: "1st Snaiwatzer War"
+ cb_1st_snaiwatzer_war: "1st Snaiwatzer War"
+ cb_1st_snaiwatzer_war_desc: "The Historical 1st Snaiwatzer War that took place between Elender Confederation and Snaiwatzer Pikemen's League"
+ wg_1st_snaiwatzer_war: "1st Snaiwatzer War"
+ wg_1st_snaiwatzer_war_desc: "Wargoal is to show our supremacy by winning battles."
+ po_elenders_defeat: "Dismantle Elender Confederation"
+ PEACE_po_elenders_defeat: "§VDismantle Elenders§!"
+ po_elenders_defeat_desc: "We will dismantle the Elender Confederation and by that Win the 1st Snaiwatzer War."
+ CB_ALLOWED_po_elenders_defeat: "Dismantling Elenders"
+ po_elender_1st_victory: "Defeat Pikemen's League"
+ PEACE_po_elender_1st_victory: "§VAnnex Pikemen's League§!"
+ po_elender_1st_victory_desc: "We will annex the Pikemen's League and by that Win the 1st Snaiwatzer War."
+ CB_ALLOWED_po_elender_1st_victory: "Annexing Pikemen's League"
+ snaiwatz.4.t: "1st Snaiwatzer War comes to our borders"
+ snaiwatz.4.desc: "REPLACE_ME"
+ snaiwatz.4.a: "Join the Elender Confederation"
+ snaiwatz.4.b: "Join the Recreated Pikemen's League"
+ snaiwatz.5.t: "End of Elender Confederation"
+ snaiwatz.5.desc: "REPLACE_ME"
+ snaiwatz.5.a: "They have lost this wargame, glory to the Empire!"
+ TD_Dismantle_Elenders_tt: "§YAll possible countries will be released from Elenders and their capital will be ceded to us or one of our allies picked by chance.§!"
+ snaiwatz.6.t: "End of Pikemen's League"
+ snaiwatz.6.desc: "REPLACE_ME"
+ snaiwatz.6.a: "They have lost this wargame, death to the Empire!"
+ TD_Win_1st_snaiwatzer_war_tt: "§YWe will annex all provinces of the Snaiwatzer members of the Pikemen's league, and gain core's on leader's provinces.§!"
