--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -46,14 +46,14 @@
  elender_riches_of_snaiwatz_desc: "Snaiwatz was known in later centuries for it's natural riches, Gold, Silver, Quartz, and extreme deposits of Iron. We should open new mines to utilize this riches."
  elender_anti_imperial_sentiment: "Anti-imperial Sentiment"
  elender_anti_imperial_sentiment_desc: "We are heirs of free Elenders, and we defy our fate as slave soldiers of the nobility. We shall burn down this empire like Liemar wanted us to do!"
- elender_lessons_of_franz_kitzhen: "Lessons of Franz Kitzhen"
- elender_lessons_of_franz_kitzhen_desc: "Franz Kitzhen, the founder of Elender Confederation and it's first leader, has made significat impact on the modern warfare with the way how he utilized the artillery, moving it swiftly from one side of the battlefield to the other."
+ elender_lessons_of_friedrich_kitzhen: "Lessons of Friedrich Kitzhen"
+ elender_lessons_of_friederich_kitzhen_desc: "Friedrich Kitzhen, the founder of Elender Confederation and it's first leader, has made significat impact on the modern warfare with the way how he utilized the artillery, moving it swiftly from one side of the battlefield to the other."
  elender_first_ministry_of_forgein_politics: "First Ministry of Forgein Politics"
  elender_first_ministry_of_forgein_politics_desc: "Elender Diplomatisches Korps was first entity in the whole world that we could call by modern-term of Ministry of Forgein Politics, as it revolutionized the way it has kept up Elender relations with other states."
  elender_legacy_of_mercenary_wars: "Legacy of Mercenary Wars"
  elender_legacy_of_mercenary_wars_desc: "With Mercenary wars over, we continue to live on, and spread our influence not only all over Snaiwatz, but all over the Silvestria, and we shall not stop until all of the Silvestria is under our rule!"
  
- snaiwatz.1.t: "The Development of Coal Mining"
+ snaiwatz.1.t: "Development of Coal Mining"
  snaiwatz.1.desc: "Brothers of the mine rejoice!\nSwing, swing, swing with me!\nRaise your pick and raise your voice!\nSing, sing, sing with me!\nDown and down into the deep\nWho knows what we'll find beneath?\nDiamonds, rubies, gold, and more\nHidden in the mountains store\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\\nThe sunlight will not reach this low\nDeep, deep in the mine\nNever seen the blue moonglow\nSnaiwatzer won't fly so high\nFill a glass and down some mead\nStuff your bellies at the feast!\nStumble home and fall asleep\nDreaming in our mountain keep\nBorn underground\nGrown inside a rocky womb\nThe Earth is our cradle\nThe mountain shall become our tomb\nFace us on the battlefield\nYou will meet your doom\nWe do not fear what lies beneath\nWe can never dig too deep\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal."
  snaiwatz.1.a: "The Coal... is MINE!"
  snaiwatz.2.t: "Elender Coup"
@@ -118,4 +118,9 @@
  snaiwatz.6.t: "End of Pikemen's League"
  snaiwatz.6.desc: "REPLACE_ME"
  snaiwatz.6.a: "They have lost this wargame, death to the Empire!"
- TD_Win_1st_snaiwatzer_war_tt: "§YWe will annex all provinces of the Snaiwatzer members of the Pikemen's league, and gain core's on leader's provinces.§!"
+ TD_Win_1st_snaiwatzer_war_tt: "§YAnnex every Snaiwatzer member of the Pikemen's league. Leader's provinces will be cored for free.§!"
+
+ FREE_ARMY: "Free Army"
+ GREAT_ARMY: "Great Army"
+ KRIEGSKAPITAN: "Kriegskapitän"
+ KRIEGSKAPITANIN: "Kriegskapitänin"
