Event on Startup for Snaiwatz

--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -119,6 +119,10 @@
  snaiwatz.6.desc: "REPLACE_ME"
  snaiwatz.6.a: "They have lost this wargame, death to the Empire!"
  TD_Win_1st_snaiwatzer_war_tt: "§YAnnex every Snaiwatzer member of the Pikemen's league. Leader's provinces will be cored for free.§!"
+ 
+ snaiwatz.100.t: "Golden age of Mercenaries"
+ snaiwatz.100.desc: "REPLACE_ME"
+ snaiwatz.100.a: "We revel in glory of our Elenders"
 
  FREE_ARMY: "Free Army"
  GREAT_ARMY: "Great Army"
