--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -120,6 +120,13 @@
  snaiwatz.6.a: "They have lost this wargame, death to the Empire!"
  TD_Win_1st_snaiwatzer_war_tt: "§YAnnex every Snaiwatzer member of the Pikemen's league. Leader's provinces will be cored for free.§!"
  
+ estate_peasants_expand_the_elenders: "Expand the Elender Ranks"
+ estate_peasants_expand_the_elenders_desc: "We should increase the amount of the peasants that are legally allowed to join the Elender Ranks to increase our army and it's loyalty."
+ estate_nobles_royal_elenders: "Royal Elenders"
+ estate_nobles_royal_elenders_desc: "We should leave the command of the Elender armies to those who are highborn, that is, the Nobility."
+ estate_nobles_mercenary_freedom_act: "Elender Freedom Act"
+ estate_nobles_mercenary_freedom_act_desc: "We Should let the free elender armies attack everyone they seem fit to attack, this will be a good idea to keep them in shape."
+ 
  snaiwatz.100.t: "Golden age of Mercenaries"
  snaiwatz.100.desc: "REPLACE_ME"
  snaiwatz.100.a: "We revel in glory of our Elenders"
