--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -70,7 +70,7 @@
  snaiwatzer_monarchy_desc: "REPLACE_ME"
  snaiwatzer_princedom: "Snaiwatzer Princedom"
  snaiwatzer_princedom_desc: "REPLACE_ME"
- mechanic_exempt_from_saelian_empire_taxes_yes: "Is Exempted from all negative tax modifiers in Saelian Empire."
+ mechanic_exempt_from_saelian_empire_taxes_yes: "Exempteds from all taxation penalties in the Saelian Empire."
  TD_Snaiwatzer_SE_Tax_Exemption_1: "Saelian Empire Tax Exemption"
  TD_Snaiwatzer_SE_Tax_Exemption_2: "Saelian Empire Tax Exemption"
  
