Snaiwatz Flavour Events
Description debt is steadily increasing

--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -130,6 +130,23 @@
  snaiwatz.100.t: "Golden age of Mercenaries"
  snaiwatz.100.desc: "REPLACE_ME"
  snaiwatz.100.a: "We revel in glory of our Elenders"
+ snaiwatz.101.t: "Habichtenberg Palace"
+ snaiwatz.101.desc: "REPLACE_ME"
+ snaiwatz.101.a: "Glorious!"
+ unlock_habichtenberg_palace_upgrade_tt: "§YWe will rebuild Habichtenberg in palace style, granting it additional -0.5% prestige decay.§!"
+ has_upgraded_habichtenberg_tt: "Has built the Habichtenberg Palace Complex via Late-game Event."
+ snaiwatz.102.t: "Maximilian Frederick von Rehden"
+ snaiwatz.102.desc: "Cool guy"
+ snaiwatz.102.a: "We should hire him right now!"
+ snaiwatz.103.t: "Reconstruction of Limstadt Route"
+ snaiwatz.103.desc: "REPLACE_ME"
+ snaiwatz.103.a: "Reconstruct This once-glorious road!"
+ TD_Snaiwatz_reconstructing_limstadt_route: "Reconstruction of Limstadt Route"
+ snaiwatz.104.t: "Freedom of Adrianburg Privilege"
+ snaiwatz.104.desc: "REPLACE_ME"
+ snaiwatz.104.a: "Glory to our Free City!"
+ snaiwatz.105.desc: "REPLACE_ME"
+ snaiwatz.105.a: "Glory to our State!"
 
  FREE_ARMY: "Free Army"
  GREAT_ARMY: "Great Army"
