--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -114,35 +114,35 @@
  snaiwatz.5.t: "End of Elender Confederation"
  snaiwatz.5.desc: "REPLACE_ME"
  snaiwatz.5.a: "They have lost this wargame, glory to the Empire!"
- TD_Dismantle_Elenders_tt: "§YAll possible countries will be released from Elenders and their capital will be ceded to us or one of our allies picked by chance.§!"
+ TD_Dismantle_Elenders_tt: "Release All possible countries from the Confederation. Their capital will be ceded to us or one of our randomly selected ally."
  snaiwatz.6.t: "End of Pikemen's League"
  snaiwatz.6.desc: "REPLACE_ME"
  snaiwatz.6.a: "They have lost this wargame, death to the Empire!"
- TD_Win_1st_snaiwatzer_war_tt: "§YAnnex every Snaiwatzer member of the Pikemen's league. Leader's provinces will be cored for free.§!"
+ TD_Win_1st_snaiwatzer_war_tt: "Every Snaiwatzer member of the Pikemen's league will be annexed. Leader's provinces will be cored for free."
  
- estate_peasants_expand_the_elenders: "Expand the Elender Ranks"
- estate_peasants_expand_the_elenders_desc: "We should increase the amount of the peasants that are legally allowed to join the Elender Ranks to increase our army and it's loyalty."
+ estate_peasants_expand_the_elenders: "Letters of War"
+ estate_peasants_expand_the_elenders_desc: "Offer peasants land for their service in the military."
  estate_nobles_royal_elenders: "Royal Elenders"
- estate_nobles_royal_elenders_desc: "We should leave the command of the Elender armies to those who are highborn, that is, the Nobility."
+ estate_nobles_royal_elenders_desc: "Elenders will be led by the blue-blooded nobles instead of the filthy lowborns."
  estate_nobles_mercenary_freedom_act: "Elender Freedom Act"
- estate_nobles_mercenary_freedom_act_desc: "We Should let the free elender armies attack everyone they seem fit to attack, this will be a good idea to keep them in shape."
+ estate_nobles_mercenary_freedom_act_desc: "Elenders will be able to do whatever they see fit necessary to satisfy the army."
  
  snaiwatz.100.t: "Golden age of Mercenaries"
  snaiwatz.100.desc: "REPLACE_ME"
  snaiwatz.100.a: "We revel in glory of our Elenders"
- snaiwatz.101.t: "Habichtenberg Palace"
+ snaiwatz.101.t: "Renovation of Habichtenberg"
  snaiwatz.101.desc: "REPLACE_ME"
  snaiwatz.101.a: "Glorious!"
- unlock_habichtenberg_palace_upgrade_tt: "§YWe will rebuild Habichtenberg in palace style, granting it additional -0.5% prestige decay.§!"
+ unlock_habichtenberg_palace_upgrade_tt: "Upgrade the §YHabichtenberg§! great project with §G-0.5%§! Prestige Decay."
  has_upgraded_habichtenberg_tt: "Has built the Habichtenberg Palace Complex via Late-game Event."
  snaiwatz.102.t: "Maximilian Frederick von Rehden"
  snaiwatz.102.desc: "Cool guy"
  snaiwatz.102.a: "We should hire him right now!"
  snaiwatz.103.t: "Reconstruction of Limstadt Route"
  snaiwatz.103.desc: "REPLACE_ME"
- snaiwatz.103.a: "Reconstruct This once-glorious road!"
+ snaiwatz.103.a: "We will reconnect the lands."
  TD_Snaiwatz_reconstructing_limstadt_route: "Reconstruction of Limstadt Route"
- snaiwatz.104.t: "Freedom of Adrianburg Privilege"
+ snaiwatz.104.t: "Great Snaiwatzer Freedom"
  snaiwatz.104.desc: "REPLACE_ME"
  snaiwatz.104.a: "Glory to our Free City!"
  snaiwatz.105.desc: "REPLACE_ME"
