Confederation of the Wretched Incident (WIP)

--- a/localisation/TD_01_flavour_bohemia_l_english.yml
+++ b/localisation/TD_01_flavour_bohemia_l_english.yml
@@ -4,6 +4,10 @@
  td_bohemia.1.a: "His son will take his place."
  td_bohemia.1.b: "If king says it's true, then it MUST be true!"
  
+ td_bohemia.2.t: "Battle of Dunkbrunnen"
+ td_bohemia.2.desc: "REPLACE_ME"
+ td_bohemia.2.a: "This is a Disaster!"
+ 
  #I'm putting it here due to it being related to insanity of King Pepik
  decision_become_oustria_title: "Proclaim Oustria @AUS"
  decision_become_oustria_desc: "BECOME OUSTRIA, REALIZE BOHEMIAN DREAMS"
