--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -999,9 +999,32 @@
  SE_incident.500.a: "We will retake it by force."
  SE_incident.500.b: "Perhaps a new mint should take its place."
  SE_incident.500.c: "Every prince should be able to distribute their own coin."
- incident_granted_coinage_rights: "Granted Coinage Rgiths"
+ incident_granted_coinage_rights: "Granted Coinage Rigths"
  princely_coinage_rights: "Coinage Rights"
  desc_princely_coinage_rights: "We are able to mint our own money, as long as one side of the coin displays the current emperor."
+ 
+ incident_confederation_of_the_wretched: "Confederation of the Wretched"
+ incident_confederation_of_the_wretched_member_alert: "The Snaiwatzer Pikemen's League has lost the war to contain the heretical peasants known as Elenders. We should do something about it before the state of lawlessness spreads over the whole empire."
+ incident_confederation_of_the_wretched_emperor_alert: "The Snaiwatzer Pikemen's League has lost the war to contain the heretical peasants known as Elenders. We should do something about it before the state of lawlessness spreads over the whole empire."
+ elenders_left_alone: "Elenders Left Alone"
+ SE_incident.602.t: "Confederation of the Wretched"
+ SE_incident.602.desc: "The Snaiwatzer Pikemen's League has lost the war to contain the heretical peasants known as Elenders. We should do something about it before the state of lawlessness spreads over the whole empire."
+ SE_incident.602.a: "Reinforce our rule over Snaiwatz"
+ SE_incident.602.b: "Leave the Elenders Alone"
+ 2ND_SNAIWATZER_WAR_WN: "2nd Snaiwatzer War"
+ cb_2nd_snaiwatzer_war: "2nd Snaiwatzer War"
+ cb_2nd_snaiwatzer_war_desc: "The Historical 2nd Snaiwatzer War that took place between Elender Confederation and Emperor's Sphere of Influence"
+ wg_2nd_snaiwatzer_war: "2nd Snaiwatzer War"
+ wg_2nd_snaiwatzer_war_desc: "Wargoal is to show our supremacy by winning battles."
+ TD_Win_2nd_snaiwatzer_war_tt: "We will show total supremacy over the Emperor by defenestrating him."
+ SE_incident.603.t: "Defenestration of the Emperor"
+ SE_incident.603.desc: "REPLACE_ME"
+ SE_incident.603.a: "Glory to all of the Elenders!"
+ po_elender_2nd_victory: "Defenestrate Emperor"
+ PEACE_po_elender_2nd_victory: "§VDefenestrate Emperor§!"
+ po_elender_2nd_victory_desc: "We will kill the Emperor by defenestration and by that Win the 2nd Snaiwatzer War."
+ CB_ALLOWED_po_elender_2nd_victory: "Defenestrating Emperor"
+ 
  
  saelian.3.t: "Tetrarchy Disgruntled"
  saelian.3.desc: "Our recent efforts to break the status quo in the empire have upset the tetrarchy much more than they already were."
