--- a/localisation/TD_01_flavour_diarena_l_english.yml
+++ b/localisation/TD_01_flavour_diarena_l_english.yml
@@ -23,3 +23,21 @@
  MADAHARO: "Madaharo"
  AFARO: "Afaro"
  KOBERRA: "Koberra"
+
+ sochoani_ideas: "Sochoani Ideas"
+ sochoani_ideas_bonus: "Sochoani Ambitions"
+ sochoani_ideas_start: "Sochoani Traditions"
+ socho_baddani_integration: "Baddani Integrations"
+ socho_baddani_integration_desc: "When we fought our great war against Konatar under Dalmar Mar Figii there were many urbanites wishing to help us take down the autocratic kingdom. Now some of them joined our court, showing us their way of life."
+ socho_scourge_of_konatar: "Scourge of Konatar"
+ socho_scourge_of_konatar_desc: "We originally didn't intend to start a conflict with the Lahagis. Their constant pressure and raids on our lands finally led to the unification of Umati kingdoms under the great Dalmar Mar Figii. Soon after he and his forces managed to defeat and kill the Ninkaro of Konatar in the battle of Dohgi, sealing the fate of the Koberra."
+ socho_sacred_seniority: "Sacred Seniority"
+ socho_sacred_seniority_desc: "Up until our unification, every Umati state maintained a small council of elders to advise and oversee some minor tasks in the country. With the unification a new, great seniority was established, overseeing picking of new heirs and maintaining stability of the realm."
+ socho_hayusidi_influence: "Hayusidi Influence"
+ socho_hayusidi_influence_desc: "Nomads of the Didarda have interacted with our people greatly. Their knowledge of the constellations, mapmaking and even navigation help us to move the goods in a much swifter manner, especially in the hilly landscape of Husrhadigar."
+ socho_lafanama_system: "Lafanama System"
+ socho_lafanama_system_desc: "In order to fairly divide the newly acquired land, a new law was set in place. In the Lafanam system all land is auctioned and given to the man that promises to make use of it the most."
+ socho_scholars_of_jalqaba: "Scholars of Jalqaba"
+ socho_scholars_of_jalqaba_desc: "Our openness to accept foreign scholars have led to them forming a great community in the city of Jalqaba, where they not only write treaties in the style of great Murtafian masters, but also teach the population about their findings."
+ socho_umati_dawn: "Umati Dawn"
+ socho_umati_dawn_desc: "For a long time we were seen as disorganized herders, paying tribute to our stronger neighbours. Now we are the ones to receive the gifts, with everyone respecting our status in the region."
